--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
+<img src="https://i.natgeofe.com/n/8a3e578f-346b-479f-971d-29dd99a6b699/nationalgeographic_2751013_4x3.jpg">
+<img src="https://media-cldnry.s-nbcnews.com/image/upload/t_nbcnews-fp-1024-512,f_auto,q_auto:best/newscms/2014_40/695336/141001-halloween-candy-corn-1700.jpg" 
+alt="A Photograph of candy corn">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Alexander_Albon-Red_Bull_RB16_%284%29.jpg/220px-Alexander_Albon-Red_Bull_RB16_%284%29.jpg" 
+alt="The RedBull formula 1 car" 
+title="A need for speed">
 
 </body>
 </html>
